--- a/index.html
+++ b/index.html
@@ -39,43 +39,51 @@
 <article class="iDevice_wrapper FreeTextIdevice" id="id0">
 <div class="iDevice emphasis0">
 <div id="ta0_85" class="block iDevice_content">
-<p><span style="text-decoration: underline; font-size: 18pt;"><strong>¿Qué es la tecnología?</strong></span><span style="text-decoration: underline;"><strong></strong></span></p>
-<p><span style="font-size: 14pt;">La tecnología es el conjunto de nociones y conocimientos científicos que el ser humano utiliza para lograr un objetivo preciso, que puede ser la solución de un problema específico del individuo o la satisfacción de alguna de sus necesidades.</span></p>
-<p><span style="font-size: 14pt;">Desde el inicio el ser humano ha tenido la necesidad de construir y desarrollar nuevos objetos que le faciliten su trabajo y mejoren su calidad de vida.</span></p>
-<p><span style="font-size: 14pt;">El comienzo de la tecnología surge con el descubrimiento del filo de una piedra para cortar, así de sencillo.</span></p>
-<p><span style="font-size: 18pt;"><u>Característica de la tecnología:</u></span></p>
+<p><span style="font-size: 36pt;"><span style="text-decoration: underline;"><strong>¿Qué es la tecnología?</strong></span><span style="text-decoration: underline;"><strong></strong></span></span></p>
+<p><span style="font-size: 36pt;">La tecnología es el conjunto de nociones y conocimientos científicos que el ser humano utiliza para lograr un objetivo preciso, que puede ser la solución de un problema específico del individuo o la satisfacción de alguna de sus necesidades.</span></p>
+<p><span style="font-size: 36pt;">Desde el inicio el ser humano ha tenido la necesidad de construir y desarrollar nuevos objetos que le faciliten su trabajo y mejoren su calidad de vida.</span></p>
+<p><span style="font-size: 36pt;">El comienzo de la tecnología surge con el descubrimiento del filo de una piedra para cortar, así de sencillo.</span></p>
+<p><span style="font-size: 36pt;"><u>Característica de la tecnología:</u></span></p>
 <ul>
 <li>
-<p><span style="font-size: 14pt;">Está presente en todos los ámbitos.</span></p>
+<p><span style="font-size: 36pt;">Está presente en todos los ámbitos.</span></p>
 </li>
 <li>
-<p><span style="font-size: 14pt;">Permite fabricar nuevos objetos: a través de ella, el ser humano modifica el medio que lo rodea.</span></p>
+<p><span style="font-size: 36pt;">Permite fabricar nuevos objetos: a través de ella, el ser humano modifica el medio que lo rodea.</span></p>
 </li>
 <li>
-<p><span style="font-size: 14pt;">Es responsable de la mayoría de los descubrimientos del hombre.</span></p>
+<p><span style="font-size: 36pt;">Es responsable de la mayoría de los descubrimientos del hombre.</span></p>
 </li>
 <li>
-<p><span style="font-size: 14pt;">Si está bien utilizada mejora la calidad de vida del ser humano, si está mal utilizada puede causar graves daños.</span></p>
+<p><span style="font-size: 36pt;">Si está bien utilizada mejora la calidad de vida del ser humano, si está mal utilizada puede causar graves daños.</span></p>
 </li>
 <li>
-<p><span style="font-size: 14pt;">Está sujeta al cambio.</span></p>
+<p><span style="font-size: 36pt;">Está sujeta al cambio.</span></p>
 </li>
 <li>
-<p><span style="font-size: 14pt;">El desarrollo tecnológico dispar puede generar brechas sociales en una comunidad, regiones o naciones.</span></p>
+<p><span style="font-size: 36pt;">El desarrollo tecnológico dispar puede generar brechas sociales en una comunidad, regiones o naciones.</span></p>
 </li>
 </ul>
-<p><span style="font-size: 18pt;"><strong><u></u></strong></span></p>
-<p><span style="font-size: 18pt;"><strong><u>Tipos de tecnología:</u></strong></span></p>
-<p><span style="font-size: 14pt;">La tecnología se puede clasificar de diferentes maneras según las características que se tomen en cuenta.</span></p>
-<p><span style="font-size: 14pt;">Según el tipo de producto:</span></p>
+<p><span style="font-size: 36pt;"><strong><u></u></strong></span></p>
+<p><span style="font-size: 36pt;"><strong><u>Tipos de tecnología:</u></strong></span></p>
+<p><span style="font-size: 36pt;">La tecnología se puede clasificar de diferentes maneras según las características que se tomen en cuenta.</span></p>
+<p><span style="font-size: 36pt;">Según el tipo de producto:</span></p>
 <ul>
-<li><span style="font-size: 14pt;"><span style="text-decoration: underline;">Tecnologías Duras:</span> Utilizan elementos de las ciencias duras como la ingeniería, la mecánica, la matemática, la física, la química. El producto que se obtiene es visible y tangible, es decir, se trata de la producción de bienes materiales. Por ejemplo: Impresoras, Automóvil, Radio FM, Televisor, Avión, celular.</span></li>
-<li><span style="font-size: 14pt;"><span style="text-decoration: underline;">Tecnologías blandas:</span> por lo general, se las utiliza para mejorar procesos y lograr mayor eficiencia en instituciones o empresas. Ejemplos (El software de tu celular, El internet, El radar, El wifi, El bluetooth.)</span></li>
+<li><span style="font-size: 36pt;"><span style="text-decoration: underline;">Tecnologías Duras:</span> Utilizan elementos de las ciencias duras como la ingeniería, la mecánica, la matemática, la física, la química. El producto que se obtiene es visible y tangible, es decir, se trata de la producción de bienes materiales. Por ejemplo: Impresoras, Automóvil, Radio FM, Televisor, Avión, celular.</span></li>
 </ul>
+<p><span style="font-size: 36pt;"><img src="dura.jpg" alt="tecnologias duras" width="1224" height="591" /></span></p>
 <ul>
-<li><span style="font-size: 14pt;"><span style="text-decoration: underline;">Tecnología fija:</span> La tecnología fija consiste en aquel tipo de tecnología que se concibe para una tarea o uso específico, por lo que su reutilización en otros productos finales es muy complicada, como por ejemplo, las refinerías de petróleo, la siderúrgica, cemento y petroquímica, etc.</span></li>
-<li><span style="font-size: 14pt;"><span style="text-decoration: underline;">La tecnología flexible:</span>  es aquella que se puede utilizar en distintos productos finales, independientemente de su desarrollo u objetivo original. Ejemplo son las pantallas de televisión, que si bien se crearon para un producto concreto, luego se ha podido implementar en monitores, consolas, smartphones, etc.</span></li>
+<li><span style="font-size: 36pt;"><span style="text-decoration: underline;">Tecnologías blandas:</span> por lo general, se las utiliza para mejorar procesos y lograr mayor eficiencia en instituciones o empresas. Ejemplos (El software de tu celular, El internet, El radar, El wifi, El bluetooth.)</span></li>
 </ul>
+<p><span style="font-size: 36pt;"><img src="internet_freepik.jpg" alt="tecnologias blandas" width="1200" height="720" /></span></p>
+<ul>
+<li><span style="font-size: 36pt;"><span style="text-decoration: underline;">Tecnología fija:</span> La tecnología fija consiste en aquel tipo de tecnología que se concibe para una tarea o uso específico, por lo que su reutilización en otros productos finales es muy complicada, como por ejemplo, las refinerías de petróleo, la siderúrgica, cemento y petroquímica, etc.</span></li>
+</ul>
+<p><span style="font-size: 36pt;"><img src="refinerias-de-petroleo.jpg" alt="tecnologia fija" width="912" height="595" /></span></p>
+<ul>
+<li><span style="font-size: 36pt;"><span style="text-decoration: underline;">La tecnología flexible:</span>  es aquella que se puede utilizar en distintos productos finales, independientemente de su desarrollo u objetivo original. Ejemplo son las pantallas de televisión, que si bien se crearon para un producto concreto, luego se ha podido implementar en monitores, consolas, smartphones, etc.</span></li>
+</ul>
+<p><span style="font-size: 36pt;"><img src="celusss.jpg" alt="tecnologias flexible" width="926" height="529" /></span></p>
 </div>
 </div>
 </article>
@@ -97,6 +105,7 @@
 <li><span style="font-size: 14pt;">Analizar que es la Tecnología.</span></li>
 <li><span style="font-size: 14pt;">Distinguir su función e importancia.</span></li>
 </ul>
+<p><span style="font-size: 14pt;"><a href="https://togga117.github.io/Educacion-Tecnologia/" target="_blank" rel="noopener noreferrer">Link de la presentación online</a></span></p>
 </div>
 </div>
 </div>
