--- a/actividades.html
+++ b/actividades.html
@@ -35,9 +35,9 @@
 <article class="iDevice_wrapper FreeTextIdevice" id="id2">
 <div class="iDevice emphasis0">
 <div id="ta2_85" class="block iDevice_content">
-<p><img src="Tipos_de_tecnologia.png" alt="tipos de tecnologia" width="740" height="975" /></p>
-<p><span style="font-size: 14pt;"><a href="https://drive.google.com/file/d/1w51iW4vlbe5KWGh2Vpy7yecTIHnUEMd0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Link para descargar la actividad</a></span></p>
-<p><span style="font-size: 14pt;"><a href="https://drive.google.com/file/d/1w51iW4vlbe5KWGh2Vpy7yecTIHnUEMd0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Click</a></span></p>
+<p><img src="Tipos_de_tecnologia.png" alt="tipos de tecnologia" width="1233" height="1625" /></p>
+<p><span style="font-size: 24pt;"><a href="https://drive.google.com/file/d/1w51iW4vlbe5KWGh2Vpy7yecTIHnUEMd0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Link para descargar la actividad</a></span></p>
+<p><span style="font-size: 24pt;"><a href="https://drive.google.com/file/d/1w51iW4vlbe5KWGh2Vpy7yecTIHnUEMd0/view?usp=sharing" target="_blank" rel="noopener noreferrer">Click</a></span></p>
 <p></p>
 <p><span style="font-size: 14pt;"></span><span style="font-size: 14pt;"><a href="https://drive.google.com/file/d/1w51iW4vlbe5KWGh2Vpy7yecTIHnUEMd0/view?usp=sharing" target="_blank" title="Actividades" rel="noopener noreferrer"></a></span></p>
 </div>
@@ -49,7 +49,7 @@
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <section id="ta5_104" class="block instructions iDevice_content">
-<p><span style="font-size: 14pt;">Lea el párrafo que aparece abajo y complete las palabras que faltan.</span></p>
+<p><span style="font-size: 36pt;">Lea el párrafo que aparece abajo y complete las palabras que faltan.</span></p>
 </section>
 
     <section class="activity" id="activity-5_105">
@@ -64,45 +64,45 @@
 
 <input type="hidden" name="clozeVar5_105.feedbackId" id="clozeVar5_105.feedbackId" value="ta5_106"/>
 
-<p><span style="font-size: 14pt;">Tecnologías Duras: Utilizan elementos de las  
+<p><span style="font-size: 36pt;">Tecnologías Duras: Utilizan elementos de las 
 <label for="clozeBlank5_105.0" class="sr-av">Rellenar huecos (1):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.0" style="width:14em" />
 <span style="display:none" id="clozeAnswer5_105.0">JXUwMDNiJXUwMDBhJXUwMDBjJXUwMDBiJXUwMDBkJXUwMDBhJXUwMDA4JXUwMDEyJXUwMDUzJXUw
 MDQ0JXUwMDExJXUwMDA3JXUwMDEzJXUwMDEy
 </span>
-  como la ingeniería, la mecánica, la matemática, la física, la química. El producto que se obtiene es visible y tangible, es decir, se trata de la producción de  
+ como la ingeniería, la mecánica, la matemática, la física, la química. El producto que se obtiene es visible y tangible, es decir, se trata de la producción de 
 <label for="clozeBlank5_105.1" class="sr-av">Rellenar huecos (2):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.1" style="width:17em" />
 <span style="display:none" id="clozeAnswer5_105.1">JXUwMDNhJXUwMDBiJXUwMDBjJXUwMDBiJXUwMDBiJXUwMDE2JXUwMDUzJXUwMDRkJXUwMDBjJXUw
 MDE1JXUwMDExJXUwMDE3JXUwMDFiJXUwMDA4JXUwMDBkJXUwMDA5JXUwMDE2
 </span>
- . Por ejemplo:  
+ . Por ejemplo: 
 <label for="clozeBlank5_105.2" class="sr-av">Rellenar huecos (3):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.2" style="width:10em" />
 <span style="display:none" id="clozeAnswer5_105.2">JXUwMDExJXUwMDI0JXUwMDFkJXUwMDAyJXUwMDE3JXUwMDE2JXUwMDFjJXUwMDFkJXUwMDEzJXUw
 MDEy
 </span>
- ,  
+ , 
 <label for="clozeBlank5_105.3" class="sr-av">Rellenar huecos (4):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.3" style="width:9em" />
 <span style="display:none" id="clozeAnswer5_105.3">JXUwMDE5JXUwMDM0JXUwMDAxJXUwMDFiJXUwMDAyJXUwMDllJXUwMDg1JXUwMDFmJXUwMDA1
 </span>
- ,  
+ , 
 <label for="clozeBlank5_105.4" class="sr-av">Rellenar huecos (5):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.4" style="width:8em" />
 <span style="display:none" id="clozeAnswer5_105.4">JXUwMDBhJXUwMDMzJXUwMDA1JXUwMDBkJXUwMDA2JXUwMDRmJXUwMDY2JXUwMDBi
 </span>
- ,  
+ , 
 <label for="clozeBlank5_105.5" class="sr-av">Rellenar huecos (6):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.5" style="width:9em" />
 <span style="display:none" id="clozeAnswer5_105.5">JXUwMDBjJXUwMDMxJXUwMDA5JXUwMDA5JXUwMDEzJXUwMDFmJXUwMDFhJXUwMDFjJXUwMDFk
 </span>
- ,  
+ , 
 <label for="clozeBlank5_105.6" class="sr-av">Rellenar huecos (7):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.6" style="width:5em" />
 <span style="display:none" id="clozeAnswer5_105.6">JXUwMDE5JXUwMDM3JXUwMDFmJXUwMDlhJXUwMDlk
 </span>
- ,  
+ , 
 <label for="clozeBlank5_105.7" class="sr-av">Rellenar huecos (8):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank5_105.7" style="width:7em" />
 <span style="display:none" id="clozeAnswer5_105.7">JXUwMDNiJXUwMDA2JXUwMDA5JXUwMDE5JXUwMDE5JXUwMDBkJXUwMDEz
@@ -125,7 +125,7 @@ MDEy
 </form>
 </section>
     <section id="ta5_106" class="feedback js-feedback iDevice_content" style="display:none">
-<p><span style="font-size: 14pt;">Tecnologías Duras: Utilizan elementos de las ciencias duras como la ingeniería, la mecánica, la matemática, la física, la química. El producto que se obtiene es visible y tangible, es decir, se trata de la producción de bienes materiales. Por ejemplo: Impresoras, Automóvil, Radio FM, Televisor, Avión, celular.</span></p>
+<p><span style="font-size: 36pt;">Tecnologías Duras: Utilizan elementos de las ciencias duras como la ingeniería, la mecánica, la matemática, la física, la química. El producto que se obtiene es visible y tangible, es decir, se trata de la producción de bienes materiales. Por ejemplo: Impresoras, Automóvil, Radio FM, Televisor, Avión, celular.</span></p>
 </section>
 </div>
 </div>
@@ -137,7 +137,7 @@ MDEy
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <section id="ta6_104" class="block instructions iDevice_content">
-<p><span style="font-size: 14pt;">Lea el párrafo que aparece abajo y complete las palabras que faltan.</span></p>
+<p><span style="font-size: 36pt;">Lea el párrafo que aparece abajo y complete las palabras que faltan.</span></p>
 </section>
 
     <section class="activity" id="activity-6_105">
@@ -152,36 +152,36 @@ MDEy
 
 <input type="hidden" name="clozeVar6_105.feedbackId" id="clozeVar6_105.feedbackId" value="ta6_106"/>
 
-<p><span style="font-size: 14pt;">Tecnologías blandas: por lo general, se las utiliza para mejorar procesos y lograr mayor eficiencia en instituciones o empresas. Ejemplos ( </span> 
+<p><span style="font-size: 36pt;">Tecnologías blandas: por lo general, se las utiliza para mejorar procesos y lograr mayor eficiencia en instituciones o empresas. Ejemplos ( 
 <label for="clozeBlank6_105.0" class="sr-av">Rellenar huecos (1):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank6_105.0" style="width:25em" />
 <span style="display:none" id="clozeAnswer6_105.0">JXUwMDFkJXUwMDI5JXUwMDRjJXUwMDUzJXUwMDFjJXUwMDA5JXUwMDEyJXUwMDAzJXUwMDE2JXUw
 MDEzJXUwMDE3JXUwMDQ1JXUwMDQ0JXUwMDAxJXUwMDQ1JXUwMDU0JXUwMDAxJXUwMDU1JXUwMDQz
 JXUwMDA2JXUwMDA5JXUwMDE5JXUwMDE5JXUwMDBkJXUwMDEz
 </span>
- <span style="font-size: 14pt;"> , </span> 
+ , 
 <label for="clozeBlank6_105.1" class="sr-av">Rellenar huecos (2):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank6_105.1" style="width:11em" />
 <span style="display:none" id="clozeAnswer6_105.1">JXUwMDFkJXUwMDI5JXUwMDRjJXUwMDQ5JXUwMDA3JXUwMDFhJXUwMDExJXUwMDE3JXUwMDFjJXUw
 MDBiJXUwMDEx
 </span>
- <span style="font-size: 14pt;"> , </span> 
+ , 
 <label for="clozeBlank6_105.2" class="sr-av">Rellenar huecos (3):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank6_105.2" style="width:8em" />
 <span style="display:none" id="clozeAnswer6_105.2">JXUwMDFkJXUwMDI5JXUwMDRjJXUwMDUyJXUwMDEzJXUwMDA1JXUwMDA1JXUwMDEz
 </span>
- <span style="font-size: 14pt;"> , </span> 
+ , 
 <label for="clozeBlank6_105.3" class="sr-av">Rellenar huecos (4):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank6_105.3" style="width:7em" />
 <span style="display:none" id="clozeAnswer6_105.3">JXUwMDFkJXUwMDI5JXUwMDRjJXUwMDU3JXUwMDFlJXUwMDBmJXUwMDBm
 </span>
- <span style="font-size: 14pt;"> , </span> 
+ , 
 <label for="clozeBlank6_105.4" class="sr-av">Rellenar huecos (5):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank6_105.4" style="width:12em" />
 <span style="display:none" id="clozeAnswer6_105.4">JXUwMDFkJXUwMDI5JXUwMDRjJXUwMDQyJXUwMDBlJXUwMDE5JXUwMDEwJXUwMDExJXUwMDFiJXUw
 MDAwJXUwMDFiJXUwMDFj
 </span>
- <span style="font-size: 14pt;"> .)</span></p>
+ .)</span></p>
 <div class="block iDevice_buttons">
 <p>
 <input class="button" type="submit" name="submit6_105" value="Enviar"  id="submit6_105" />
@@ -199,7 +199,7 @@ MDAwJXUwMDFiJXUwMDFj
 </form>
 </section>
     <section id="ta6_106" class="feedback js-feedback iDevice_content" style="display:none">
-<p><span style="font-size: 14pt;">Tecnologías blandas: por lo general, se las utiliza para mejorar procesos y lograr mayor eficiencia en instituciones o empresas. Ejemplos (El software de tu celular, El internet, El radar, El wifi, El bluetooth.)</span></p>
+<p><span style="font-size: 36pt;">Tecnologías blandas: por lo general, se las utiliza para mejorar procesos y lograr mayor eficiencia en instituciones o empresas. Ejemplos (El software de tu celular, El internet, El radar, El wifi, El bluetooth.)</span></p>
 </section>
 </div>
 </div>
@@ -211,13 +211,13 @@ MDAwJXUwMDFiJXUwMDFj
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta7_100" class="block iDevice_content">
-<p><span style="font-size: 14pt;">Responde verdadero o falso</span></p>
+<p><span style="font-size: 36pt;">Responde verdadero o falso</span></p>
 </div>
 <section class="question">
 <form name="true-false-form-0b7" action="#" class="activity-form">
 <h1 class="js-sr-av">Pregunta 1</h1>
 <div id="taquestion0b7" class="block iDevice_content">
-<p><span style="font-size: 14pt;">Tecnología fija: La tecnología fija consiste en aquel tipo de tecnología que se concibe para una tarea o uso específico, por lo que su reutilización en otros productos finales es muy complicada, como por ejemplo, las refinerías de petróleo, la siderúrgica, cemento y petroquímica, etc.</span></p>
+<p><span style="font-size: 36pt;">Tecnología fija: La tecnología fija consiste en aquel tipo de tecnología que se concibe para una tarea o uso específico, por lo que su reutilización en otros productos finales es muy complicada, como por ejemplo, las refinerías de petróleo, la siderúrgica, cemento y petroquímica, etc.</span></p>
 </div>
 <p class="iDevice_answer js-required">
 <label for="true0b7"><input type="radio" name="option0b7" id="true0b7" onclick="$exe.getFeedback(0,2,'0b7','truefalse')" /> Verdadero</label> 
@@ -227,7 +227,7 @@ MDAwJXUwMDFiJXUwMDFj
 <section id="s0b7" class="feedback js-feedback js-hidden">
 <h1 class="js-sr-av">Retroalimentación</h1>
 <p><strong id="s0b7-result" class="right">Verdadero</strong></p>
-<p><span style="font-size: 14pt;">Tecnología fija: La tecnología fija consiste en aquel tipo de tecnología que se concibe para una tarea o uso específico, por lo que su reutilización en otros productos finales es muy complicada, como por ejemplo, las refinerías de petróleo, la siderúrgica, cemento y petroquímica, etc.</span></p>
+<p><span style="font-size: 36pt;">Tecnología fija: La tecnología fija consiste en aquel tipo de tecnología que se concibe para una tarea o uso específico, por lo que su reutilización en otros productos finales es muy complicada, como por ejemplo, las refinerías de petróleo, la siderúrgica, cemento y petroquímica, etc.</span></p>
 </section>
 </section>
 </div>
@@ -240,7 +240,7 @@ MDAwJXUwMDFiJXUwMDFj
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <section id="ta8_104" class="block instructions iDevice_content">
-<p><span style="font-size: 14pt;">Lea el párrafo que aparece abajo y complete las palabras que faltan.</span></p>
+<p><span style="font-size: 36pt;">Lea el párrafo que aparece abajo y complete las palabras que faltan.</span></p>
 </section>
 
     <section class="activity" id="activity-8_105">
@@ -255,26 +255,26 @@ MDAwJXUwMDFiJXUwMDFj
 
 <input type="hidden" name="clozeVar8_105.feedbackId" id="clozeVar8_105.feedbackId" value="ta8_106"/>
 
-<p><span style="font-size: 14pt;">La tecnología flexible es aquella que se puede utilizar en distintos 
+<p><span style="font-size: 36pt;">La tecnología flexible es aquella que se puede utilizar en distintos 
 <label for="clozeBlank8_105.0" class="sr-av">Rellenar huecos (1):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank8_105.0" style="width:17em" />
 <span style="display:none" id="clozeAnswer8_105.0">JXUwMDI4JXUwMDAyJXUwMDFkJXUwMDBiJXUwMDExJXUwMDE2JXUwMDE3JXUwMDFiJXUwMDFjJXUw
 MDUzJXUwMDQ2JXUwMDBmJXUwMDA3JXUwMDBmJXUwMDBkJXUwMDA5JXUwMDE2
 </span>
-, independientemente de su desarrollo u objetivo original. Ejemplo son las 
+ , independientemente de su desarrollo u objetivo original. Ejemplo son las 
 <label for="clozeBlank8_105.1" class="sr-av">Rellenar huecos (2):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank8_105.1" style="width:23em" />
 <span style="display:none" id="clozeAnswer8_105.1">JXUwMDI4JXUwMDExJXUwMDBmJXUwMDFhJXUwMDE1JXUwMDBkJXUwMDAwJXUwMDBkJXUwMDEyJXUw
 MDUzJXUwMDQ0JXUwMDAxJXUwMDQ1JXUwMDU0JXUwMDExJXUwMDA5JXUwMDA5JXUwMDEzJXUwMDFm
 JXUwMDFhJXUwMDFhJXUwMDlhJXUwMDlk
 </span>
-, que si bien se crearon para un producto concreto, luego se ha podido implementar en monitores, consolas, 
+ , que si bien se crearon para un producto concreto, luego se ha podido implementar en monitores, consolas, 
 <label for="clozeBlank8_105.2" class="sr-av">Rellenar huecos (3):</label>
 <input class="autocomplete-off" type="text" value="" id="clozeBlank8_105.2" style="width:11em" />
 <span style="display:none" id="clozeAnswer8_105.2">JXUwMDJiJXUwMDFlJXUwMDBjJXUwMDEzJXUwMDA2JXUwMDA0JXUwMDE4JXUwMDA3JXUwMDAxJXUw
 MDBiJXUwMDE2
 </span>
-, etc.</span></p>
+ , etc.</span></p>
 <div class="block iDevice_buttons">
 <p>
 <input class="button" type="submit" name="submit8_105" value="Enviar"  id="submit8_105" />
@@ -292,7 +292,7 @@ MDBiJXUwMDE2
 </form>
 </section>
     <section id="ta8_106" class="feedback js-feedback iDevice_content" style="display:none">
-<p><span style="font-size: 14pt;">La tecnología flexible es aquella que se puede utilizar en distintos productos finales, independientemente de su desarrollo u objetivo original. Ejemplo son las pantallas de televisión, que si bien se crearon para un producto concreto, luego se ha podido implementar en monitores, consolas, smartphones, etc.</span></p>
+<p><span style="font-size: 36pt;">La tecnología flexible es aquella que se puede utilizar en distintos productos finales, independientemente de su desarrollo u objetivo original. Ejemplo son las pantallas de televisión, que si bien se crearon para un producto concreto, luego se ha podido implementar en monitores, consolas, smartphones, etc.</span></p>
 </section>
 </div>
 </div>
